# curl-converter

./: README.md  pyproject.toml
src/curl_converter/: __init__.py  curl_converter.py
