[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curl-converter"
version = "0.1.0"
description = "Parse and manipulate curl command strings in Python."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

Uncomment and fill in when you're ready to publish:
authors = [
     {name = "NDNnerd", email = "ndnnerd@gmail.com"},
 ]

[project.urls]
Homepage = "https://github.com/youruser/curl-converter"
Repository = "https://github.com/youruser/curl-converter"

[tool.setuptools.packages.find]
where = ["src"]
